chore: fix compilation issue